fix: nav link spacing was done with padding, causing a strange hit area

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,5 +1,3 @@
-$font-family = 'Helvetica Neue', Arial, Helvetica, sans-serif
-
 @import '../../stylus/normalise-2.0.1'
 @import '../../stylus/mixins'
 
@@ -8,7 +6,7 @@ $font-family = 'Helvetica Neue', Arial, Helvetica, sans-serif
 // ============================================================
 
 html
-  font: 0.875em/1.5 $font-family
+  font: 0.875em/1.5 'Helvetica Neue', Arial, Helvetica, sans-serif
 
 a
   color: #08C
@@ -64,7 +62,7 @@ select
   display: inline-block
 
 .site-nav > li a
-  padding-right: 20px
+  margin-right: 20px
 
 // ============================================================
 // Global Messages
